code in progress

--- a/angel_jpcode3/angel_pythoncode_mod3.ipynb
+++ b/angel_jpcode3/angel_pythoncode_mod3.ipynb
@@ -21,15 +21,25 @@
     "#present in oracle but not in tracker\n",
     "#present in oracle but not in unitvinfo\n",
     "\n",
+    "for a in oracle_data[\"PO\"]:\n",
+    "    print a\n",
+    "\n",
+    "\n",
+    "for a in oracle_data[\"PO\"]:\n",
+    "    if a not in tracker_data[\"PO\"]:\n",
+    "        report_error(\"Missing Entry in Tracker\", a)\n",
+    "\n",
+    "\n",
+    "for a in oracle_data[\"PO\"]:\n",
+    "    if a not in tblpo_data[\"PO\"]:\n",
+    "        report_error(\"Missing Entry in access_tblpo\", a)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2874661e",
-   "metadata": {},
-   "source": [
-    "!where python"
    ]
   }
  ],
