small draft progress error mismatch

--- a/angel_jpcode3/angel_pythoncode_mod3.ipynb
+++ b/angel_jpcode3/angel_pythoncode_mod3.ipynb
@@ -18,23 +18,31 @@
    "outputs": [],
    "source": [
     "#Missing Entry\n",
-    "#present in oracle but not in tracker\n",
-    "#present in oracle but not in unitvinfo\n",
     "\n",
+    "#draft\n",
     "for a in oracle_data[\"PO\"]:\n",
     "    print a\n",
     "\n",
-    "\n",
+    "#po present in oracle but not in tracker\n",
     "for a in oracle_data[\"PO\"]:\n",
     "    if a not in tracker_data[\"PO\"]:\n",
     "        report_error(\"Missing Entry in Tracker\", a)\n",
     "\n",
-    "\n",
+    "#po present in oracle but not in unitvinfo\n",
     "for a in oracle_data[\"PO\"]:\n",
     "    if a not in tblpo_data[\"PO\"]:\n",
     "        report_error(\"Missing Entry in access_tblpo\", a)\n",
     "\n",
     "\n",
+    "\n",
+    "#Unexpected Entry(can be PO can be other things)\n",
+    "\n",
+    "\n",
+    "#po present in tracker but not in oracle\n",
+    "\n",
+    "\n",
+    "\n",
+    "#po present in access but not in oracle\n",
     "\n",
     "\n",
     "\n",
