missing field error progress executed

--- a/angel_jpcode3/angel_staging.ipynb
+++ b/angel_jpcode3/angel_staging.ipynb
@@ -543,32 +543,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fb8dec91",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Request_Date', 'FY', 'ALEMBA ', 'Budget_Code', 'FP', 'Bulk_Bucket',\n",
-       "       'Funding', 'ISC_ProjManager', 'Site', 'Service_User', 'Type',\n",
-       "       'Catalogue_Item', 'Cost_PerUnit', 'QTY', 'Status', 'Collection_Date',\n",
-       "       'Total_Cost', 'Requisition_No', 'BPS_Analyst', 'parsed_Request_Date',\n",
-       "       'parsed_QTY', 'parsed_Total_Cost', 'parsed_Collection_Date'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tracker_parsed.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "id": "d4e4b0ac",
    "metadata": {},
@@ -983,6 +957,279 @@
    ],
    "source": [
     "tracker_parsed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "77a84bde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# error - missing field draft\n",
+    "import datetime\n",
+    "\n",
+    "mandatory_fields = [\"parsed_Request_Date\", \"FY\", \"parsed_ALEMBA\", \"Budget_Code\", \"Site\", \"Service_User\", \"Type\", \"Catalogue_Item\", \"Cost_PerUnit\", \"QTY\", \"Status\", \"Total_Cost\", \"Requisition_No\", \"BPS_Analyst\"]\n",
+    "source_system = \"TRACKER\"\n",
+    "data_period = \"23-24 to 24-25\"\n",
+    "date_checked = datetime.date.today()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98630b6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# missing field error\n",
+    "summary_records = []\n",
+    "for field in mandatory_fields:\n",
+    "    missing_count = tracker_parsed[field].isna().sum()\n",
+    "    summary_records.append({\n",
+    "        \"error_type\": \"Missing Field\",\n",
+    "        \"source_system\": source_system,\n",
+    "        \"data_period\": data_period,\n",
+    "        \"date_checked\": date_checked,\n",
+    "        \"field_name\": field,\n",
+    "        \"count\": missing_count\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "d88fdcba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error_summary = pd.DataFrame(summary_records)\n",
+    "\n",
+    "error_summary[\"field_name\"] = error_summary[\"field_name\"].str.replace(r\"^parsed_\", \"\", regex=True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "field_names_report = {\n",
+    "    \"Request_Date\": \"Request Date\",\n",
+    "    \"Budget_Code\": \"Budget Code\",\n",
+    "    \"Service_User\": \"Service User\",\n",
+    "    \"Catalogue_Item\": \"Catalogue Item\",\n",
+    "    \"Cost_PerUnit\": \"Cost Per Unit\",\n",
+    "    \"Total_Cost\": \"Total Cost\",\n",
+    "    \"Requisition_No\": \"Requisition Number\",\n",
+    "    \"BPS_Analyst\": \"BPS Analyst\"\n",
+    "}\n",
+    "\n",
+    "error_summary[\"field_name\"] = error_summary[\"field_name\"].replace(field_names_report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "00c26ad5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>error_type</th>\n",
+       "      <th>source_system</th>\n",
+       "      <th>data_period</th>\n",
+       "      <th>date_checked</th>\n",
+       "      <th>field_name</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Request Date</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>FY</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>ALEMBA</td>\n",
+       "      <td>215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Budget Code</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Site</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Service User</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Type</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Catalogue Item</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Cost Per Unit</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>QTY</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Status</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Total Cost</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Requisition Number</td>\n",
+       "      <td>1355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>BPS Analyst</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       error_type source_system     data_period date_checked  \\\n",
+       "0   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "1   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "2   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "3   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "4   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "5   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "6   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "7   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "8   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "9   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "10  Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "11  Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "12  Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "13  Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "\n",
+       "            field_name  count  \n",
+       "0         Request Date      6  \n",
+       "1                   FY      0  \n",
+       "2               ALEMBA    215  \n",
+       "3          Budget Code     52  \n",
+       "4                 Site     75  \n",
+       "5         Service User      1  \n",
+       "6                 Type     25  \n",
+       "7       Catalogue Item      3  \n",
+       "8        Cost Per Unit     34  \n",
+       "9                  QTY      6  \n",
+       "10              Status      3  \n",
+       "11          Total Cost     18  \n",
+       "12  Requisition Number   1355  \n",
+       "13         BPS Analyst      0  "
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "error_summary"
    ]
   }
  ],
