added in the format error or invalid format error section - in progress

--- a/angel_jpcode3/angel_staging.ipynb
+++ b/angel_jpcode3/angel_staging.ipynb
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "98630b6c",
    "metadata": {},
    "outputs": [],
@@ -993,12 +993,27 @@
     "        \"date_checked\": date_checked,\n",
     "        \"field_name\": field,\n",
     "        \"count\": missing_count\n",
-    "    })"
+    "    })\n",
+    "\n",
+    "\n",
+    "\n",
+    "# format error / invalid format\n",
+    "for field in mandatory_fields:\n",
+    "    raw_field = field.replace(\"parsed_\", \"\")\n",
+    "    format_error_count = tracker_parsed[tracker_parsed[raw_field].notna() & tracker_parsed[field].isna()].shape[0]\n",
+    "    summary_records.append({\n",
+    "        \"error_type\": \"Invalid format\",\n",
+    "        \"source_system\": source_system,\n",
+    "        \"data_period\": data_period,\n",
+    "        \"date_checked\": date_checked,\n",
+    "        \"field_name\": field,\n",
+    "        \"count\": format_error_count\n",
+    "    })\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 61,
    "id": "d88fdcba",
    "metadata": {},
    "outputs": [],
@@ -1025,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "id": "00c26ad5",
    "metadata": {},
    "outputs": [
@@ -1185,26 +1200,166 @@
        "      <td>BPS Analyst</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Invalid format</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Request Date</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Invalid format</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>FY</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Invalid format</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>ALEMBA</td>\n",
+       "      <td>193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Invalid format</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Budget Code</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Invalid format</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Site</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Invalid format</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Service User</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Invalid format</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Type</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Invalid format</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Catalogue Item</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Invalid format</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Cost Per Unit</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Invalid format</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>QTY</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Invalid format</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Status</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Invalid format</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Total Cost</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Invalid format</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Requisition Number</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Invalid format</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>BPS Analyst</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       error_type source_system     data_period date_checked  \\\n",
-       "0   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "1   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "2   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "3   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "4   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "5   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "6   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "7   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "8   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "9   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "10  Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "11  Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "12  Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "13  Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "        error_type source_system     data_period date_checked  \\\n",
+       "0    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "1    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "2    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "3    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "4    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "5    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "6    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "7    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "8    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "9    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "10   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "11   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "12   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "13   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "14  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "15  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "16  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "17  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "18  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "19  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "20  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "21  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "22  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "23  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "24  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "25  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "26  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "27  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
        "\n",
        "            field_name  count  \n",
        "0         Request Date      6  \n",
@@ -1220,10 +1375,24 @@
        "10              Status      3  \n",
        "11          Total Cost     18  \n",
        "12  Requisition Number   1355  \n",
-       "13         BPS Analyst      0  "
+       "13         BPS Analyst      0  \n",
+       "14        Request Date      2  \n",
+       "15                  FY      0  \n",
+       "16              ALEMBA    193  \n",
+       "17         Budget Code      0  \n",
+       "18                Site      0  \n",
+       "19        Service User      0  \n",
+       "20                Type      0  \n",
+       "21      Catalogue Item      0  \n",
+       "22       Cost Per Unit      0  \n",
+       "23                 QTY      0  \n",
+       "24              Status      0  \n",
+       "25          Total Cost      0  \n",
+       "26  Requisition Number      0  \n",
+       "27         BPS Analyst      0  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
