added in out of range error types

--- a/angel_jpcode3/angel_staging.ipynb
+++ b/angel_jpcode3/angel_staging.ipynb
@@ -977,11 +977,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "98630b6c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "allowed_FY = [\"23-24\", \"24-25\"]\n",
+    "allowed_start_date = pd.to_datetime(\"2023-01-01\")\n",
+    "allowed_end_date = pd.to_datetime(\"2026-03-31\")\n",
+    "valid_sites = [\"RLH\", \"CW\", \"SBH\", \"NUH\", \"MEH\"]\n",
+    "\n",
+    "\n",
+    "\n",
     "# missing field error\n",
     "summary_records = []\n",
     "for field in mandatory_fields:\n",
@@ -1002,18 +1009,70 @@
     "    raw_field = field.replace(\"parsed_\", \"\")\n",
     "    format_error_count = tracker_parsed[tracker_parsed[raw_field].notna() & tracker_parsed[field].isna()].shape[0]\n",
     "    summary_records.append({\n",
-    "        \"error_type\": \"Invalid format\",\n",
+    "        \"error_type\": \"Invalid Format\",\n",
     "        \"source_system\": source_system,\n",
     "        \"data_period\": data_period,\n",
     "        \"date_checked\": date_checked,\n",
     "        \"field_name\": field,\n",
     "        \"count\": format_error_count\n",
-    "    })\n"
+    "    })\n",
+    "\n",
+    "\n",
+    "\n",
+    "# out of range error - FY\n",
+    "out_of_range_FY_count = tracker_parsed[~tracker_parsed[\"FY\"].isin(allowed_FY)].shape[0]\n",
+    "summary_records.append({\n",
+    "    \"error_type\": \"Out of Range Values\",\n",
+    "    \"source_system\": source_system,\n",
+    "    \"data_period\": data_period,\n",
+    "    \"date_checked\": date_checked,\n",
+    "    \"field_name\": \"FY\",\n",
+    "    \"count\": out_of_range_FY_count\n",
+    "})\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# out of range error - date\n",
+    "out_of_range_date_count = tracker_parsed[tracker_parsed[\"parsed_Collection_Date\"].notna() &\n",
+    "(\n",
+    "    (tracker_parsed[\"parsed_Collection_Date\"] < allowed_start_date) |\n",
+    "    (tracker_parsed[\"parsed_Collection_Date\"] > allowed_end_date)\n",
+    ")].shape[0]\n",
+    "\n",
+    "summary_records.append({\n",
+    "    \"error_type\": \"Out of Range Dates\",\n",
+    "    \"source_system\": source_system,\n",
+    "    \"data_period\": data_period,\n",
+    "    \"date_checked\": date_checked,\n",
+    "    \"field_name\": \"parsed_Collection_Date\",\n",
+    "    \"count\": out_of_range_date_count\n",
+    "})\n",
+    "\n",
+    "\n",
+    "\n",
+    "#out of range error - site\n",
+    "out_of_range_site_count = tracker_parsed[\n",
+    "    tracker_parsed[\"Site\"].notna() &\n",
+    "    ~tracker_parsed[\"Site\"].isin(valid_sites)].shape[0]\n",
+    "\n",
+    "summary_records.append({\n",
+    "    \"error_type\": \"Out of Range Values\",\n",
+    "    \"source_system\": source_system,\n",
+    "    \"data_period\": data_period,\n",
+    "    \"date_checked\": date_checked,\n",
+    "    \"field_name\": \"Site\",\n",
+    "    \"count\": out_of_range_site_count\n",
+    "})\n",
+    "\n",
+    "\n",
+    "# per unit and total cost mismatch\n",
+    "# per unit*QTY doesnt match the total cost column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 89,
    "id": "d88fdcba",
    "metadata": {},
    "outputs": [],
@@ -1032,7 +1091,8 @@
     "    \"Cost_PerUnit\": \"Cost Per Unit\",\n",
     "    \"Total_Cost\": \"Total Cost\",\n",
     "    \"Requisition_No\": \"Requisition Number\",\n",
-    "    \"BPS_Analyst\": \"BPS Analyst\"\n",
+    "    \"BPS_Analyst\": \"BPS Analyst\",\n",
+    "    \"Collection_Date\": \"Collection Date\"\n",
     "}\n",
     "\n",
     "error_summary[\"field_name\"] = error_summary[\"field_name\"].replace(field_names_report)"
@@ -1040,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 90,
    "id": "00c26ad5",
    "metadata": {},
    "outputs": [
@@ -1202,7 +1262,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>Invalid format</td>\n",
+       "      <td>Invalid Format</td>\n",
        "      <td>TRACKER</td>\n",
        "      <td>23-24 to 24-25</td>\n",
        "      <td>2025-07-29</td>\n",
@@ -1211,7 +1271,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>Invalid format</td>\n",
+       "      <td>Invalid Format</td>\n",
        "      <td>TRACKER</td>\n",
        "      <td>23-24 to 24-25</td>\n",
        "      <td>2025-07-29</td>\n",
@@ -1220,7 +1280,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>Invalid format</td>\n",
+       "      <td>Invalid Format</td>\n",
        "      <td>TRACKER</td>\n",
        "      <td>23-24 to 24-25</td>\n",
        "      <td>2025-07-29</td>\n",
@@ -1229,7 +1289,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>Invalid format</td>\n",
+       "      <td>Invalid Format</td>\n",
        "      <td>TRACKER</td>\n",
        "      <td>23-24 to 24-25</td>\n",
        "      <td>2025-07-29</td>\n",
@@ -1238,7 +1298,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>Invalid format</td>\n",
+       "      <td>Invalid Format</td>\n",
        "      <td>TRACKER</td>\n",
        "      <td>23-24 to 24-25</td>\n",
        "      <td>2025-07-29</td>\n",
@@ -1247,7 +1307,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>Invalid format</td>\n",
+       "      <td>Invalid Format</td>\n",
        "      <td>TRACKER</td>\n",
        "      <td>23-24 to 24-25</td>\n",
        "      <td>2025-07-29</td>\n",
@@ -1256,7 +1316,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>Invalid format</td>\n",
+       "      <td>Invalid Format</td>\n",
        "      <td>TRACKER</td>\n",
        "      <td>23-24 to 24-25</td>\n",
        "      <td>2025-07-29</td>\n",
@@ -1265,7 +1325,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
-       "      <td>Invalid format</td>\n",
+       "      <td>Invalid Format</td>\n",
        "      <td>TRACKER</td>\n",
        "      <td>23-24 to 24-25</td>\n",
        "      <td>2025-07-29</td>\n",
@@ -1274,7 +1334,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
-       "      <td>Invalid format</td>\n",
+       "      <td>Invalid Format</td>\n",
        "      <td>TRACKER</td>\n",
        "      <td>23-24 to 24-25</td>\n",
        "      <td>2025-07-29</td>\n",
@@ -1283,7 +1343,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
-       "      <td>Invalid format</td>\n",
+       "      <td>Invalid Format</td>\n",
        "      <td>TRACKER</td>\n",
        "      <td>23-24 to 24-25</td>\n",
        "      <td>2025-07-29</td>\n",
@@ -1292,7 +1352,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
-       "      <td>Invalid format</td>\n",
+       "      <td>Invalid Format</td>\n",
        "      <td>TRACKER</td>\n",
        "      <td>23-24 to 24-25</td>\n",
        "      <td>2025-07-29</td>\n",
@@ -1301,7 +1361,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
-       "      <td>Invalid format</td>\n",
+       "      <td>Invalid Format</td>\n",
        "      <td>TRACKER</td>\n",
        "      <td>23-24 to 24-25</td>\n",
        "      <td>2025-07-29</td>\n",
@@ -1310,7 +1370,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
-       "      <td>Invalid format</td>\n",
+       "      <td>Invalid Format</td>\n",
        "      <td>TRACKER</td>\n",
        "      <td>23-24 to 24-25</td>\n",
        "      <td>2025-07-29</td>\n",
@@ -1319,47 +1379,77 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
-       "      <td>Invalid format</td>\n",
+       "      <td>Invalid Format</td>\n",
        "      <td>TRACKER</td>\n",
        "      <td>23-24 to 24-25</td>\n",
        "      <td>2025-07-29</td>\n",
        "      <td>BPS Analyst</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Out of Range Values</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>FY</td>\n",
+       "      <td>307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Out of Range Dates</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Collection Date</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Out of Range Values</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-07-29</td>\n",
+       "      <td>Site</td>\n",
+       "      <td>461</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        error_type source_system     data_period date_checked  \\\n",
-       "0    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "1    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "2    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "3    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "4    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "5    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "6    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "7    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "8    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "9    Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "10   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "11   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "12   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "13   Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "14  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "15  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "16  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "17  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "18  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "19  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "20  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "21  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "22  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "23  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "24  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "25  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "26  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
-       "27  Invalid format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "             error_type source_system     data_period date_checked  \\\n",
+       "0         Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "1         Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "2         Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "3         Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "4         Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "5         Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "6         Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "7         Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "8         Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "9         Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "10        Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "11        Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "12        Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "13        Missing Field       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "14       Invalid Format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "15       Invalid Format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "16       Invalid Format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "17       Invalid Format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "18       Invalid Format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "19       Invalid Format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "20       Invalid Format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "21       Invalid Format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "22       Invalid Format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "23       Invalid Format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "24       Invalid Format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "25       Invalid Format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "26       Invalid Format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "27       Invalid Format       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "28  Out of Range Values       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "29   Out of Range Dates       TRACKER  23-24 to 24-25   2025-07-29   \n",
+       "30  Out of Range Values       TRACKER  23-24 to 24-25   2025-07-29   \n",
        "\n",
        "            field_name  count  \n",
        "0         Request Date      6  \n",
@@ -1389,16 +1479,64 @@
        "24              Status      0  \n",
        "25          Total Cost      0  \n",
        "26  Requisition Number      0  \n",
-       "27         BPS Analyst      0  "
+       "27         BPS Analyst      0  \n",
+       "28                  FY    307  \n",
+       "29     Collection Date      0  \n",
+       "30                Site    461  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "error_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "28b642a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Request_Date                      object\n",
+       "FY                                object\n",
+       "ALEMBA                            object\n",
+       "Budget_Code                       object\n",
+       "FP                                object\n",
+       "Bulk_Bucket                       object\n",
+       "Funding                           object\n",
+       "ISC_ProjManager                   object\n",
+       "Site                              object\n",
+       "Service_User                      object\n",
+       "Type                              object\n",
+       "Catalogue_Item                    object\n",
+       "Cost_PerUnit                     float64\n",
+       "QTY                              float64\n",
+       "Status                            object\n",
+       "Collection_Date                   object\n",
+       "Total_Cost                        object\n",
+       "Requisition_No                    object\n",
+       "BPS_Analyst                       object\n",
+       "parsed_Request_Date       datetime64[ns]\n",
+       "parsed_QTY                         Int64\n",
+       "parsed_Total_Cost                float64\n",
+       "parsed_Collection_Date    datetime64[ns]\n",
+       "parsed_ALEMBA                      Int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tracker_parsed.dtypes"
    ]
   }
  ],
